# advent-of-code

2024/day01/: day01.py
2024/day02/: day02.py
2024/day04/: day04.py
2024/day06/: day06.py
2024/day07/: day07.py
2024/day08/: day08.py
2024/day10/: day10.py
2024/day14/: input.txt
2024/day15/: day15.py
2024/day16/: day16.py
2024/day18/: input.txt
2024/day19/: day19.py
2024/day25/: day25.py
2025/: .clang-format  CMakeLists.txt
2025/.nvim-workspace/: workspace.lua
2025/common/: CMakeLists.txt  ansi.hpp  input.hpp  main.cpp
2025/day01/: CMakeLists.txt
2025/day01/src/: input.hpp  main.cpp  parse.cpp  parse.hpp  part1.cpp  part2.cpp
2025/day02/: CMakeLists.txt
2025/day02/src/: common.hpp  input.hpp  main.cpp  parse.cpp  parse.hpp  part1.cpp  part2.cpp
2025/day03/src/: common.hpp  input.hpp  parse.cpp  parse.hpp  part1.cpp  part2.cpp
2025/day04/: CMakeLists.txt
2025/day04/src/: common.hpp  input.hpp  parse.cpp  parse.hpp  part1.cpp  part2.cpp
2025/day05/src/: parse.hpp  part1.cpp  part2.cpp
2025/day06/src/: common.hpp  parse.hpp  part1.cpp  part2.cpp
2025/day07/src/: parse.hpp  part1.cpp  part2.cpp
2025/day08/src/: common.hpp  parse.hpp  part1.cpp  part2.cpp
2025/day09/src/: parse.hpp  part1.cpp  part2.cpp  part2.cpp.bak  real_input.txt  test_input.txt
2025/day10/: CMakeLists.txt
2025/day10/src/: common.hpp  parse.hpp  part1.cpp  part2.cpp
2025/day11/: CMakeLists.txt
2025/day11/src/: parse.hpp  part1.cpp  part2.cpp
2025/template/: CMakeLists.txt
2025/template/src/: input.hpp  parse.cpp  parse.hpp  part1.cpp  part2.cpp
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py
day19/: day19.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: day23.py
day24/: day24.py
template/: dayXX.py
